[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/Enemy.gd" type="Script" id=1]
[ext_resource path="res://Sprites/enemy1.png" type="Texture" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends Sprite

func _process(delta):
	rotate(0.01)

"

[sub_resource type="CircleShape2D" id=2]

[node name="enemy" type="Node2D"]

[node name="shooting" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="startTimer" type="Timer" parent="shooting"]
wait_time = 3.0
one_shot = true

[node name="EnemyShootTimer" type="Timer" parent="shooting"]
wait_time = 0.2

[node name="changePattern" type="Timer" parent="shooting"]
wait_time = 15.0

[node name="helptimer" type="Timer" parent="shooting"]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 73.1012, 0.170285 )
scale = Vector2( 0.17, 0.17 )
texture = ExtResource( 2 )
script = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2( 73.0765, 0.174828 )
scale = Vector2( 1.7721, 1.7721 )
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )
[connection signal="timeout" from="shooting/startTimer" to="shooting" method="_on_startTimer_timeout"]
[connection signal="timeout" from="shooting/EnemyShootTimer" to="shooting" method="_on_EnemyShootTimer_timeout"]
[connection signal="timeout" from="shooting/changePattern" to="shooting" method="_on_changePattern_timeout"]
[connection signal="timeout" from="shooting/helptimer" to="shooting" method="_on_helptimer_timeout"]
[connection signal="input_event" from="StaticBody2D" to="Sprite" method="_on_StaticBody2D_input_event"]
